--- a/src/assets/css/main.scss
+++ b/src/assets/css/main.scss
@@ -4,7 +4,9 @@
 @import 'banner';
 @import 'plain-text';
 @import 'counter';
-@import 'text';
 @import 'home-films';
 @import 'services';
 @import 'certificates';
+@import 'team';
+@import 'allBlogs';
+@import 'single-post';
