--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,5 +1,10 @@
 .header{
-    background-color: blue;
+    position: absolute;
+    top: 30px;
+    left: 0;
+    width: 100%;
+    z-index: 10;
+
     .header_wrapper{
         display: flex;
         justify-content: space-between;
