--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -2,6 +2,11 @@ $first_color: #e90101;
 h1,h2,h3,h4,h5,h6,p,a,span{
     padding: 0;
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+a{
+    text-decoration: none;
+    color: #000;
 }
 @mixin button {
     outline: none;
@@ -12,4 +17,30 @@ h1,h2,h3,h4,h5,h6,p,a,span{
     border-radius: 0;
     text-transform: uppercase;
     font-weight: 500;
+}
+@mixin section-header {
+    h2{
+        font-size: 14px;
+        letter-spacing: 2px;
+        padding-left: 10px;
+        text-transform: uppercase;
+        position: relative;
+        &::after{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 3px;
+            height: 100%;
+            background-color: #e90101;
+        }
+    }
+    h1{
+        font-size: 40px;
+        line-height: 58px;
+    }
+}
+.container{
+    max-width: 1160px;
+    margin: auto;
 }
